--- a/configs/config_download.json
+++ b/configs/config_download.json
@@ -41,7 +41,7 @@
 	"HDB_option":{	
 				"E":{
 						"whether_download":1,
-						"save_type":["OHLCV"],
+						"save_type":["OHLCV","Fundamental"],
 						"asset":["E"],
 						"adj":"None",
 						"freq":["D"],
@@ -50,7 +50,7 @@
 				"I":{
 						"whether_download":1,
 						"by":"index_name",
-						"save_type":["OHLCV"],
+						"save_type":["OHLCV","Fundamental"],
 						"index_market_list":["MSCI","CSI","SSE","SZSE","CICC","SW","CNI","OTH"],
 						"index_name":["000001.SH"],
 						"asset":["I"],
