--- a/configs/config_download.json
+++ b/configs/config_download.json
@@ -50,7 +50,7 @@
 				"I":{
 						"whether_download":1,
 						"by":"index_name",
-						"save_type":["OHLCV","Fundamental"],
+						"save_type":["OHLCV"],
 						"index_market_list":["MSCI","CSI","SSE","SZSE","CICC","SW","CNI","OTH"],
 						"index_name":["000001.SH"],
 						"asset":["I"],
